fix: more article changes
Signed-off-by: oscitate <ephie8654@outlook.com>

--- a/articleAssets/aboutmentalhealth/adhd/page2.html
+++ b/articleAssets/aboutmentalhealth/adhd/page2.html
@@ -33,7 +33,7 @@
 	<div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
 		<h1 style="align-self: center"><b>WHAT IS IT?</b></h1>
 
-		<p>ADHD is one of the more common type of neurodevelopmental disorder. If you have ADHD, you may notice difficulties in regulating your everyday behaviour/ reactions to that appropriate of your age that frequently persists through adolescence into adult years. It can be related but not limited to inattention, hyperactivity and impulsivity which is caused by dysregulation of your brain’s prefrontal cortex that governs your logical thinking and self-control of impulses.</p>
+		<p>ADHD is one of the more common types of neurodevelopmental disorders. If you have ADHD, you may notice difficulties in regulating your everyday behaviour/ reactions that are appropriate for your age that frequently persist through adolescence into your adult years. It can be related but not limited to inattention, hyperactivity, and impulsivity caused by dysregulation of your brain’s prefrontal cortex, which governs your logical thinking and self-control of impulses.</p>
 		
 		<img style="align-self: center; width: 70%; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page2-image1.png">
 	</div>
