--- a/articleAssets/aboutmentalhealth/adhd/page3.html
+++ b/articleAssets/aboutmentalhealth/adhd/page3.html
@@ -1,4 +1,4 @@
-<!doctype html>
+	<!doctype html>
 <html lang="en">
 <head>
 	<meta charset="utf-8">
@@ -57,7 +57,7 @@
 			<p style="white-space: nowrap;"> 
 				<b>Medical Conditions</b>
 				<ul>
-					<li>Brain injuries such as stroke, concussions and brain tumour</li>
+					<li>Brain injuries such as stroke, concussions, and brain tumours</li>
 				</ul>
 			</p>
 		</div>
