--- a/articleAssets/aboutmentalhealth/adhd/page5.html
+++ b/articleAssets/aboutmentalhealth/adhd/page5.html
@@ -36,7 +36,7 @@
 			<p>Given the difficulties with inattention/ hyperactivity-impulsiveness (depending on how severe it is), you will likely find yourself “bonding” with Sergeant Major over extra duties or “counselling”. The following scenarios could be familiar to you.</p>
 		
 		<p>
-			<b>Poor impulse control leading to unwise and impulsive decisions being made</b> e.g.,
+			<b>Poor impulse control leads to unwise and impulsive decisions being made</b> e.g.,
 			<ul>
 				<li>Going to certain areas out of curiosity despite being warned not to</li>
 				<li>Choosing to take the more “fun/convenient” way instead of the safe way</li>
