--- a/articleAssets/aboutmentalhealth/adhd/page9.html
+++ b/articleAssets/aboutmentalhealth/adhd/page9.html
@@ -32,15 +32,15 @@
 <body>
 	<div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
 		<p>
-			While medication is typically the go-to approaches for adults and children dealing with attention-deficit/hyperactivity disorder,  those who want extra support or don't want to take medication, ADHD therapies can help manage their condition 
+			While medication is typically the go-to approach for adults and children dealing with attention-deficit/hyperactivity disorder,  for those who want extra support or don't want to take medication, ADHD therapies can help manage their condition 
 		</p>
 
 		<img style="width: 100%; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page9-image1.png">
 
 		<p style="font-style: italic;">
-				If you have or believe you have ADHD and it is severely impacting your life, do seek professional help as soon you can! :)
+				If you have or believe you have ADHD and it is severely impacting your life, do seek professional help as soon as you can! :) 
 				<br><br>
-				Remember given the right treatment, these problems can be managed to help you go through your NS life smoothly and improve your overall mental well-being/ functioning in the future!
+				Remember, given the right treatment, these problems can be managed to help you go through your NS life smoothly and improve your overall mental well-being/ functioning in the future!
 		</p>
 	</div>
 </body>
