--- a/articleAssets/aboutmentalhealth/anxiety/page3.html
+++ b/articleAssets/aboutmentalhealth/anxiety/page3.html
@@ -31,7 +31,7 @@
 </style>
 <body>
   <div style="display: flex; flex-direction: column; align-content: self; padding-left: 5%; padding-right: 5%;">
-		<p style="text-align: center;"><b>Genes can play a role in anxiety disorders, but it is also linked to other mental health conditions, physical health and excessive use of substances.</b></p>
+		<p style="text-align: center;"><b>Genes can play a role in anxiety disorders, but it is also linked to other mental health conditions, physical health, and excessive use of substances.</b></p>
 
 		<div>
 			<p> 
