--- a/articleAssets/aboutmentalhealth/anxiety/page4.html
+++ b/articleAssets/aboutmentalhealth/anxiety/page4.html
@@ -47,7 +47,7 @@
 			</ul>
 		</p>
 
-		<p style="text-align: center;">People can have more than one anxiety disorder, and symptoms often start in childhood or adolescence.</p>
+		<p style="text-align: center;">People can have more than one anxiety disorder and symptoms often start in childhood or adolescence.</p>
 	</div>
 </body>
 </html>
