--- a/articleAssets/aboutmentalhealth/anxiety/page7.html
+++ b/articleAssets/aboutmentalhealth/anxiety/page7.html
@@ -35,7 +35,7 @@
 
 		<p>Anxiety may make it hard to concentrate, focus, or make decisions, which can affect task completion and job performance.</p>
 
-		<p>It could also cause symptoms like fast heartbeat, shortness of breath, or dizziness, making it difficult to perform physically demanding tasks.</p>
+		<p>It could also cause symptoms like a fast heartbeat, shortness of breath, or dizziness, making it difficult to perform physically demanding tasks.</p>
 			
 		<p>Anxiety, especially social anxiety, can make it harder to interact with peers, leading to feelings of isolation or avoidance of group activities. It could also potentially lead to trouble sleeping, which may affect energy levels and performance during work hours.</p>
 			
