--- a/articleAssets/aboutmentalhealth/anxiety/page8.html
+++ b/articleAssets/aboutmentalhealth/anxiety/page8.html
@@ -39,7 +39,7 @@
 
 		<p>
 			Around 60 to 70 percent of people improve and can lead normal lives.
-			Treatment aims to reduce and eventually eliminate the symptoms of anxiety disorders, while improving quality of life.
+			Treatment aims to reduce and eventually eliminate the symptoms of anxiety disorders while improving quality of life.
 		</p>
 
 		<p><b style="text-decoration: underline;">By medications:</b> Antidepressants can help control anxiety with minimal side effects, even with long-term use. Benzodiazepines may be used for short periods.</p>
