--- a/articleAssets/aboutmentalhealth/asd/page4.html
+++ b/articleAssets/aboutmentalhealth/asd/page4.html
@@ -48,10 +48,10 @@
 			<b>Environmental</b>
 
 			<ul>
-				<li>Parents giving birth in their later years in life.</li>
+				<li>Parents give birth in their later years of life.</li>
 				<li>Prenatal exposure to air pollution or certain pesticides</li>
 				<li>Pre-birth exposure to harmful chemicals</li>
-				<li>Maternal obesity, diabetes or immune system disorders</li>
+				<li>Maternal obesity, diabetes, or immune system disorders</li>
 				<li>Prematurity (before 37 weeks) or very low birth weight</li>
 			</ul>
 		</p>
