--- a/articleAssets/aboutmentalhealth/asd/page8.html
+++ b/articleAssets/aboutmentalhealth/asd/page8.html
@@ -34,7 +34,7 @@
 		<img style="width: 20%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/asd/page8-image1.png">
 
 		<p>
-			They also tend to be strong visual and auditory learners, excelling in topics like math, science, computing, programming, music or art. Matching them to the right type of work nature can help them derive more meaningful serving with less adjustment issues.
+			They also tend to be strong visual and auditory learners, excelling in topics like math, science, computing, programming, music, or art. Matching them to the right type of work nature can help them derive more meaningful serving with less adjustment issues.
 		</p>
 
 		<p>
