--- a/articleAssets/aboutmentalhealth/asd/page9.html
+++ b/articleAssets/aboutmentalhealth/asd/page9.html
@@ -33,12 +33,12 @@
   <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
 		<h1 style="text-align: center;"><b>TREATMENT</b></h1>
 
-		<p>Depending on the ability and severity of the symptoms, on can learn the skills that are lacking or build on strengths if given early intervention. Working closely with a consistent mental health care provider will help you find the right combination of treatment such as:</p>
+		<p>They also tend to be strong visual and auditory learners, excelling in topics like math, science, computing, programming, music, or art. Matching them to the right type of work nature can help them derive more meaningful serving with less adjustment issues.</p>
 
 		<p>
 			<b>Medication</b>
 			<br>
-			While no medications can cure ASD core symptoms, but specific medications can help control or ease the symptoms e.g., anxiety.
+			While no medications can cure ASD core symptoms, specific medications can help control or ease the symptoms e.g., anxiety.
 		</p>
 
 		<p>
