--- a/articleAssets/aboutmentalhealth/bipolar/page1.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page1.html
@@ -33,7 +33,7 @@
   <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
     <img style="width: 100%; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/aboutmentalhealth.png">
 
-    <p>Bipolar disorder (formerly called manic-depressive illness or manic depression) can cause unusual swings in a person's mood, energy level, and concentration. Transiting through the various period of high energy (maniac episodes) and low energy (depressive episodes) can be disruptive to their well-being, in turn affect their day-to-day activities as well as their relationship with others. </p>
+    <p>Bipolar disorder (formerly called manic-depressive illness or manic depression) can cause unusual swings in a person's mood, energy level, and concentration. Transiting through the various periods of high energy (manic episodes) and low energy (depressive episodes) can be disruptive to their well-being and, in turn, affect their day-to-day activities as well as their relationship with others. </p>
     
     <p>While there is no direct cure for bipolar, the symptoms can be effectively managed through long term and continuous treatment such as combination of medication and psychotherapy.</p>
   </div>
