--- a/articleAssets/aboutmentalhealth/bipolar/page2.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page2.html
@@ -37,7 +37,7 @@
 
 		<p>In 2019, approximately 1 in 150 adults (40 million people, or 0.53% of the global population) were living with bipolar disorder. While the prevalence of bipolar disorder among men and women is approximately equal, available data indicate that women are more often diagnosed.</p>
 
-		<p style="flex: 3">The exact cause of bipolar is yet known, but can be triggered by extreme stress, genetic or chemical influence or life-changing events. It can occur to anyone at any point in time.</p>
+		<p style="flex: 3">The exact cause of bipolar is yet known, but can be triggered by extreme stress, genetic or chemical influence, or life-changing events. It can occur to anyone at any point in time.</p>
 
 		<img style="width: 60%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/bipolar/page2-image1.png">
 	</div>
