--- a/articleAssets/aboutmentalhealth/bipolar/page3.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page3.html
@@ -38,13 +38,13 @@
 		<p>
 			<b style="text-decoration: underline;">Bipolar I Disorder</b>
 			<br>
-			Short manic episodes, or severe manic symptoms that needs immediate hospital care. Depressive episodes usually occur for a period of time as well.
+			Short manic episodes, or severe manic symptoms that need immediate hospital care. Depressive episodes usually occur for a period of time as well.
 		</p>
 			
 		<p>
 			<b style="text-decoration: underline;">Bipolar II Disorder</b>
 			<br>
-			Defined by a pattern of depressive episodes and hypomanic episodes, but without the full-blown manic symptoms.
+			Defined by a pattern of depressive episodes and hypomanic episodes but without the full-blown manic symptoms.
 		</p>
 	</div>
 </body>
