--- a/articleAssets/aboutmentalhealth/bipolar/page6.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page6.html
@@ -39,7 +39,7 @@
 			<ul>
 				<li>Feel irritable</li>
 				<li>Feel like they can't enjoy things they once liked</li>
-				<li>Feel very sad, worthless or hopeless</li>
+				<li>Feel very sad, worthless, or hopeless</li>
 				<li>Have thoughts about death or suicide</li>
 				<br>
 				<li>Feel tired or “slowed down”</li>
