--- a/articleAssets/aboutmentalhealth/burnout/page7.html
+++ b/articleAssets/aboutmentalhealth/burnout/page7.html
@@ -31,7 +31,7 @@
 </style>
 <body>
 	<div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
-		<h1 style="align-self: center"><b>TREATMENT</b></h1>
+		<h1 style="align-self: center"><b>WHAT's NEXT</b></h1>
 
 		<img style="width: 80%; align-self: center; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/burnout/page7-image1.png">
 
