--- a/articleAssets/aboutmentalhealth/burnout/page8.html
+++ b/articleAssets/aboutmentalhealth/burnout/page8.html
@@ -31,7 +31,7 @@
 </style>
 <body>
 	<div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
-		<h1 style="align-self: center"><b>TREATMENT</b></h1>
+		<h1 style="align-self: center"><b>WHAT'S NEXT</b></h1>
 
 		<p>
 			<b>Burnout is a signal, not a permanent state</b>
