--- a/articleAssets/aboutmentalhealth/burnout/page9.html
+++ b/articleAssets/aboutmentalhealth/burnout/page9.html
@@ -31,16 +31,13 @@
 </style>
 <body>
 	<div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
+		<h1><b>YOU MAY BE INTERESTED IN THESE TOO:</b></h1>
+
 		<p>
-			While medication is typically the go-to approaches for adults and children dealing with attention-deficit/hyperactivity disorder,  those who want extra support or don't want to take medication, ADHD therapies can help manage their condition 
-		</p>
-
-		<img style="width: 100%; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page9-image1.png">
-
-		<p style="font-style: italic;">
-				If you have or believe you have ADHD and it is severely impacting your life, do seek professional help as soon you can! :)
-				<br><br>
-				Remember given the right treatment, these problems can be managed to help you go through your NS life smoothly and improve your overall mental well-being/ functioning in the future!
+			<a href="internal:///thisarticle?category=aboutself&title=Know Your Personality Type&id=3" style="color: #765000">Understanding Yourself – Know Your Personality</a>
+			<br><br>
+			<a href="internal:///thisarticle?category=aboutself&title=Distress Signs&id=6" style="color: #765000">Understanding Yourself – Distress Signs</a>
+			<br><br>
 		</p>
 	</div>
 </body>
