--- a/articleAssets/aboutmentalhealth/depression/page1.html
+++ b/articleAssets/aboutmentalhealth/depression/page1.html
@@ -35,7 +35,7 @@
 
     <p>Major Depressive Disorder (MDD) or more commonly known as depression affects 3.8% of people in the world and is the leading cause of disability worldwide.</p>
 
-    <p>Differing from regular mood changes, the prolonged loss of pleasure or interest in activities often affect all aspects of life, leading to poor social and vocational functioning, often accompanied by social withdrawal.  There are many types of depression ranging from dysthymia to seasonal affective disorder. Nonetheless, depression remains highly treatable. Many known and effective treatments are available especially if early intervention is sought.</p>
+    <p>Differing from regular mood changes, the prolonged loss of pleasure or interest in activities often affects all aspects of life, leading to poor social and vocational functioning, often accompanied by social withdrawal.  There are many types of depression ranging from dysthymia to seasonal affective disorder. Nonetheless, depression remains highly treatable. Many known and effective treatments are available especially if early intervention is sought.</p>
   </div>
 </body>
 </html>
