--- a/articleAssets/aboutmentalhealth/depression/page2.html
+++ b/articleAssets/aboutmentalhealth/depression/page2.html
@@ -33,7 +33,7 @@
   <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
 		<h1 style="text-align: center;"><b>WHAT IS IT?</b></h1>
 
-		<p>Depression, or clinically known as Major Depressive Disorder, depicts a prolonged low mood state that could arise from a response to loss, failure, disappointment or hardship. The pervasive sadness, loss of energy, inability to enjoy past hobbies and constant feeling of guilt or worthlessness can disrupt our quality of life, in turn affect our sleep, appetites and relationships. It can also increase our tendency to turn to unhealthy coping mechanism like substance misuse, self-harm or suicidal thoughts.</p>
+		<p>Depression, clinically known as Major Depressive Disorder, depicts a prolonged low mood state that could arise from a response to loss, failure, disappointment, or hardship. The pervasive sadness, loss of energy, inability to enjoy past hobbies, and a constant feeling of guilt or worthlessness can disrupt our quality of life, in turn, affect our sleep, appetites, and relationships. It can also increase our tendency to turn to unhealthy coping mechanisms like substance misuse, self-harm, or suicidal thoughts.</p>
 
 		<p>It was estimated that 5.8% of Singapore population suffers from depression and can affect anyone regardless of culture, race, age, social or economic status.</p>
 
