--- a/articleAssets/aboutmentalhealth/depression/page3.html
+++ b/articleAssets/aboutmentalhealth/depression/page3.html
@@ -41,7 +41,7 @@
 			</ul>
 		</p>
 
-		<p>While it is normal to feel sad when we face unpleasant or adverse events, people who are clinically depressed experiences more lasting sadness even after the negative event has passed for a long time.</p>
+		<p>While it is normal to feel sad when we face unpleasant or adverse events, people who are clinically depressed experience more lasting sadness even after the negative event has passed for a long time.</p>
 
 		<img style="width: 50%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/depression/page3-image1.png">
 	</div>
