--- a/articleAssets/aboutmentalhealth/depression/page4.html
+++ b/articleAssets/aboutmentalhealth/depression/page4.html
@@ -34,7 +34,7 @@
 		<h1 style="text-align: center;"><b>SYMPTOMS</b></h1>
 
 		<p>
-			Different people may experience the depressive episode in different ways but common symptoms include:
+			Different people may experience depressive episode in different ways but common symptoms include:
 			<br><br>
 			<ul>	
 				<li>lethargy to complete daily work</li>
