--- a/articleAssets/aboutmentalhealth/depression/page7.html
+++ b/articleAssets/aboutmentalhealth/depression/page7.html
@@ -35,7 +35,7 @@
 
 		<img style="width: 115%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/depression/page7-image1.png">
 
-		<p>Engaging in self-care may seems difficult and daunting at the start, but we can take small steps by engaging in those we have done before/ more familiar with. Doing it with your close ones can also make it more interesting to embark on. The key is to inject some time to focus on yourself.</p>
+		<p>Engaging in self-care may seem difficult and daunting at the start, but we can take small steps by engaging in those we have done before/ more familiar with. Doing it with your close ones can also make it more interesting to embark on. The key is to inject some time to focus on yourself. </p>
 	</div>
 </body>
 </html>
