--- a/articleAssets/aboutmentalhealth/depression/page8.html
+++ b/articleAssets/aboutmentalhealth/depression/page8.html
@@ -31,7 +31,7 @@
 </style>
 <body>
   <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
-		<p style="font-style: italic;"><b style="font-style: inherit;">If you have or believe you have Depression and it is severely impacting your life, do seek professional help as soon you can! :) Remember given the right treatment, these problems can be managed to help you go through your NS life smoothly and improve your overall mental well-being/ functioning in the future!</b></p>
+		<p style="font-style: italic;"><b style="font-style: inherit;">If you have or believe you have Depression and it is severely impacting your life, do seek professional help as soon as you can! :) Remember given the right treatment, these problems can be managed to help you go through your NS life smoothly and improve your overall mental well-being/ functioning in the future!</b></p>
 
 		<h1><b>YOU MAY BE INTERESTED IN THESE TOO:</b></h1>
 
