--- a/articleAssets/aboutself/distresssigns/page4.html
+++ b/articleAssets/aboutself/distresssigns/page4.html
@@ -33,9 +33,7 @@
   <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">	
 		<img style="width: 70%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutself/distresssigns/page4-image1.png">
 
-		<p>Positive stress response that involves <b>optimal levels of stimulation</b></p>
-
-		<p>Occurs in response to challenging but manageable and rewarding tasks e.g., healthy competition</p>
+		<p>Positive stress response involves <b>optimal levels of stimulation</b> that occurs in response to challenging but manageable and rewarding tasks e.g., healthy competition</p>
 
 		<p>Beneficial as it generates a <b>sense of accomplishment</b>, facilitates <b>personal growth</b> and development, and supports <b>high performance</b></p>
 	</div>
