--- a/articleAssets/aboutself/eustress/page3.html
+++ b/articleAssets/aboutself/eustress/page3.html
@@ -35,11 +35,9 @@
 
 		<br><br>
 
-		<p>Negative stress response characterized by <b>negative emotions and physiological reactions</b></p>
+		<p>Negative stress response characterized by <b>negative emotions and physiological reactions</b> that arises when one is overwhelmed by demands, losses, or perceived threats.</p>
 
-		<p>Arises when one is overwhelmed by demands, losses, or perceived threats</p>
-
-		<p>Harmful as it can lead to <b>serious health issues</b> like high blood pressure, heart disease, obesity, diabetes and even suicide</p>
+		<p>It is harmful as it can lead to <b>serious health issues</b> like high blood pressure, heart disease, obesity, diabetes and even suicide</p>
 	</div>
 </body>
 </html>
