--- a/articleAssets/aboutself/eustress/page4.html
+++ b/articleAssets/aboutself/eustress/page4.html
@@ -35,11 +35,9 @@
 
 		<br><br>
 
-		<p>Positive stress response that involves <b>optimal levels of stimulation.</b></p>
+		<p>Positive stress response involves <b>optimal levels of stimulation</b> that occurs in response to challenging but manageable and rewarding tasks e.g., healthy competition</p>
 
-		<p>Occurs in response to challenging but manageable and rewarding tasks e.g., healthy competition</p>
-
-		<p>Beneficial as it generates a <b>sense of accomplishment</b>, facilitates <b>personal growth</b> and development, and supports <b>high performance</b>.</p>
+		<p>It is beneficial as it generates a <b>sense of accomplishment</b>, facilitates <b>personal growth</b> and development, and supports <b>high performance</b>.</p>
 	</div>
 </body>
 </html>
