--- a/articleAssets/aboutself/eustress/page5.html
+++ b/articleAssets/aboutself/eustress/page5.html
@@ -31,11 +31,7 @@
 </style>
 <body>
   <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
-		<p>Positive stress response that involves <b>optimal levels of stimulation.</b></p>
-
-		<p>Occurs in response to challenging but manageable and rewarding tasks e.g., healthy competition</p>
-
-		<p>Beneficial as it generates a <b>sense of accomplishment</b>, facilitates <b>personal growth</b> and development, and supports <b>high performance</b>.</p>
+		<p>How we experience stress and reap the outcome are largely biased by how we evaluate and respond to the situation. If we think of the stress from unfamiliar/ uncertain situation as opportunities for fun and exploration, we would then see the stress as more welcoming. The fact is whether we are in an actual life-threatening situation or not, our body releases the stress hormone – adrenaline and cortisol!</p>
 
 		<img style="width: 100%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutself/eustress/page5-image1.png">	
 	</div>
