--- a/articleAssets/aboutself/knowyourpersonality/page3.html
+++ b/articleAssets/aboutself/knowyourpersonality/page3.html
@@ -38,7 +38,7 @@
 		<b>HISTORY OF PERSONALITY TESTING</b>	
 
 		<p>
-			Do you know the earliest form of personality testing was seen in the late 18th century? One of the method involved the measurement of bumps on your skull, known as phrenology! It was believed that brain muscle would grow bigger in the specific brain areas that was associated with a brain function, in turn supposedly connect to a specific personality trait. However, it is now seen as a pseudoscience. 
+			Do you know the earliest form of personality testing was seen in the late 18th century? One of the methods involved the measurement of bumps on your skull, known as phrenology! It was believed that brain muscle would grow bigger in the specific brain areas that was associated with a brain function, in turn supposedly connect to a specific personality trait. However, it is now seen as a pseudoscience.
 		</p>
 	</div>
 </body>
