--- a/articleAssets/aboutself/knowyourpersonality/page7.html
+++ b/articleAssets/aboutself/knowyourpersonality/page7.html
@@ -35,10 +35,9 @@
 
 		<img style="width: 90%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutself/knowyourpersonality/page7-image1.png">
 
-		<p style="text-align: center;">
-			<b>Be consistent.</b> 
-			<br>
-			Some tests are very specific to certain scenario e.g., workspace. In such case, think specifically of your work self when approaching the items. Read the test instructions carefully too so you are certain of how the test works
+		<p>
+			<b>Be honest.</b> This is not about presenting what you would like to be or an “ideal” you. 
+			<b>It is about how you are majority of the time.</b> If all the options do not seem to apply to you, choose the best fit. Do not fear to show a less positive side if that is your usual self. Afterall, you are the only one who is going to read the result.
 		</p>
 	</div>
 </body>
