--- a/articleAssets/aboutmentalhealth/adhd/page1.html
+++ b/articleAssets/aboutmentalhealth/adhd/page1.html
@@ -33,7 +33,7 @@
   <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
     <img style="width: 100%; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/aboutmentalhealth.png">
 
-    <p>Attention Deficit and Hyperactivity Disorder (ADHD) is a type of neuro-development condition with symptoms relating to inattentiveness, and/or hyperactivity-impulsivity. It is often diagnosed when you are a child and can persist till your adulthood. While it is not curable, medication is one of the more popular and effective method to manage ADHD. There are also therapies that can help you build the needed skills to overcome your challenges. Seeking help timely and consistently set a structure for yourself will give you good chance of living a fulfilling life just like any other person!</p>
+    <p>Attention Deficit and Hyperactivity Disorder (ADHD) is a type of neuro-development condition with symptoms relating to inattentiveness, and/or hyperactivity-impulsivity. It is often diagnosed when you are a child and can persist till your adulthood. While it is not curable, medication is one of the more popular and effective methods to manage ADHD. Some therapies can help you build the needed skills to overcome your challenges. Seeking help timely and consistently setting a structure for yourself will give you a good chance of living a fulfilling life just like any other person!</p>
   </div>
 </body>
 </html>
