--- a/articleAssets/aboutmentalhealth/asd/page1.html
+++ b/articleAssets/aboutmentalhealth/asd/page1.html
@@ -34,7 +34,7 @@
     <img style="width: 100%; object-fit: contain;" src="../../assets/articleAssets/aboutmentalhealth/aboutmentalhealth.png">
 
 		<p>
-			Autism Spectrum Disorder (ASD) is a type of lifelong neurodevelopmental condition that can be detected in early childhood. Based on World Health Organisation, about 1 in 100 children has autism. Characteristics differ across individual but generally causes key difficulties in social interaction and communication and can exhibit restrictive or repetitive behaviours/ interest that can cause some dysfunction in school, work or other aspects of life. Early and proper treatment can help people with ASD build the relevant social skills to lead a more positive life!
+			Autism Spectrum Disorder (ASD) is a type of lifelong neuro-developmental condition that can be detected in early childhood. Based on the World Health Organisation, about 1 in 100 children has autism. Characteristics differ across individuals but generally cause key difficulties in social interaction and communication and can exhibit restrictive or repetitive behaviours/interests that can cause some dysfunction in school, work, or other aspects of life. Early and proper treatment can help people with ASD build the relevant social skills to lead a more positive life!
 		</p>
 	</div>
 </body>
