--- a/articleAssets/aboutmentalhealth/asd/page2.html
+++ b/articleAssets/aboutmentalhealth/asd/page2.html
@@ -33,7 +33,7 @@
   <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
 		<h1 style="text-align: center;"><b>WHAT IS IT?</b></h1>
 
-		<p>Autism Spectrum Disorder (ASD) is a neurodevelopmental condition that typically appear in the early part of your life and last through your lifetime. Being a spectrum type of disorder, there is a wide range in the type and severity of symptoms. People with ASD are known to have more challenges with social interactions, communications and also exhibit restrictive or repetitive behaviours/ interests, which can cause some dysfunction in their school, work or other aspects of life.</p>
+		<p>Autism Spectrum Disorder (ASD) is a neuro-developmental condition that typically appears in the early part of your life and lasts through your lifetime. Being a spectrum type of disorder, there is a wide range in the type and severity of symptoms. People with ASD are known to have more challenges with social interactions, and communications and also exhibit restrictive or repetitive behaviours/ interests, which can cause some dysfunction in their school, work, or other aspects of life.</p>
 
 		<img style="width: 90%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/asd/page2-image1.png">
 	</div>
