--- a/articleAssets/aboutmentalhealth/asd/page3.html
+++ b/articleAssets/aboutmentalhealth/asd/page3.html
@@ -39,7 +39,7 @@
 
 		<img style="width: 30%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/asd/page3-image2.png">
 
-		<p style="text-align: center; margin-top: -16px;">While people with ASD may have difficulty expressing emotions and lack social skills, in turn avoid interaction, it doesn’t mean they don’t have feelings or do not want to connect with you! They may just not know how. Do give them a little more patience when getting to know them.</p>
+		<p style="text-align: center; margin-top: -16px;">While people with ASD may have difficulty expressing emotions and lack social skills, in turn, avoid interaction, it doesn’t mean they don’t have feelings or do not want to connect with you! They may just not know how. Do give them a little more patience when getting to know them.</p>
 	</div>
 </body>
 </html>
