--- a/articleAssets/aboutmentalhealth/asd/page7.html
+++ b/articleAssets/aboutmentalhealth/asd/page7.html
@@ -38,7 +38,7 @@
 		</p>
 
 		<p>
-			On the flip side, some of the symptoms of people with ASD can be a strength! For instance, being able to go deep into their interests meant they excel in learning the details and typically remember what they learnt for long period of time. This makes them great subject-matter-experts (SME) in their chosen field.
+			On the flip side, some of the symptoms of people with ASD can be a strength! For instance, being able to go deep into their interests meant they excelled in learning the details and typically remembered what they learned for a long period of time. This makes them great subject-matter-experts (SME) in their chosen field.
 		</p>
 
 		<img style="width: 50%; object-fit: contain; align-self: center; transform: translate(50%, -20%)" src="../../assets/articleAssets/aboutmentalhealth/asd/page7-image1.png">
