--- a/articleAssets/aboutmentalhealth/bipolar/page7.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page7.html
@@ -35,7 +35,7 @@
 
 		<p>Having unpredictable and unstable mood swings can be unsafe in military context due to the high-risk trainings and access to weaponry. When we are highly emotional, our decision-making ability is often impaired and this can result in more impulsive actions and less regard for safety e.g., misuse of weapon. Personality may also change during acute episodes.</p>
 
-		<p>Nevertheless, serviceman with bipolar can still serve through their NS with the appropriate adjustment in terms of vocation and workplace conditions e.g., lower tempo taskings and understanding teams. Servicemen with bipolar should also engage in more regular and healthier lifestyle habits to improve their functioning and self-regulation of the mood swings. Compliance to their treatment plan is also paramount to maintain effective management of the symptoms.</p>
+		<p>Nevertheless, servicemen with bipolar can still serve NS with the appropriate vocation and workplace conditions e.g., lower tempo tasking and understanding teams. Servicemen with bipolar should also engage in more regular and healthier lifestyle habits to improve their functioning and self-regulation of their mood swings. Compliance with their treatment plan is also paramount to maintain effective management of the symptoms.</p>
 	</div>
 </body>
 </html>
