--- a/articleAssets/aboutmentalhealth/bipolar/page8.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page8.html
@@ -33,12 +33,12 @@
   <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
 		<h1 style="text-align: center;"><b>TREATMENT</b></h1>
 
-		<p>Medicine is an essential part of the treatment plan but depending on the severity and characteristics shown by the individual, a mixture of psychotherapy or psychosocial intervention can be implemented to balance the side-effects, functioning needs and effectiveness.</p>
+		<p>Medicine is an essential part of the treatment plan but depending on the severity and characteristics shown by the individual, a mixture of psychotherapy or psychosocial intervention can be implemented to balance the side-effects, functioning needs, and effectiveness.</p>
 
 		<img style="width: 115%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/bipolar/page8-image1.png">
 
 		<b style="font-style: italic;">
-			If you have or believe you have Bipolar Disorder and it is severely impacting your life, do seek professional help as soon you can! :) Remember given the right treatment, these problems can be managed to help you go through your NS life smoothly and improve your overall mental well-being/ functioning in the future!
+			If you have or believe you have Bipolar Disorder and it is severely impacting your life, do seek professional help as soon as you can! :) Remember, with the right treatment, these problems can be managed to help you go through your NS life smoothly and improve your overall mental well-being/ functioning in the future!
 		</b>
 	</div>
 </body>
