--- a/articleAssets/aboutmentalhealth/depression/page6.html
+++ b/articleAssets/aboutmentalhealth/depression/page6.html
@@ -33,7 +33,7 @@
   <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">
 		<h1 style="text-align: center;"><b>TREATMENT</b></h1>
 
-		<p>Effective treatment can come from medication or psychotherapy to address the various symptoms presented. Aside, self-care strategies to maintain healthy lifestyle habits are also essential to allow our body to respond more positively to the treatment. As the latin phrase goes: <span style="font-style: italic;">“Mens sana in corpore sano”</span> which means a healthy mind in a healthy body!</p>
+		<p>Effective treatment can come from medication or psychotherapy to address the various symptoms presented. Aside, self-care strategies to maintain healthy lifestyle habits are also essential to allow our bodies to respond more positively to the treatment. As the Latin phrase goes: <span style="font-style: italic;">“Mens sana in corpore sano”</span> which means a healthy mind in a healthy body!</p>
 
 		<img style="width: 115%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutmentalhealth/depression/page6-image1.png">
 	</div>
