--- a/articleAssets/aboutself/distresssigns/page1.html
+++ b/articleAssets/aboutself/distresssigns/page1.html
@@ -36,7 +36,7 @@
 
     <img style="width: 80%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutself/aboutself.png">
 
-    <p>Stress is a normal response that anyone can experience when life demands exceed their ability to cope effectively. Sometimes stress can be from obvious source, other times from small daily things like work, school, family or friendship issues.</p>
+    <p>Stress is a normal response that anyone can experience when life demands exceed the ability to cope effectively. Sometimes stress can be from obvious source, other times from small daily things like work, school, family or friendship issues.</p>
 
     <p>Prolonged inability to resolve stress can lead to distress. It can show up in many ways, from general signs that someone seems different to more specific changes in how they talk, think, feel, act, or behave. Being aware of the distress signs is first step to improve your coping!</p>
   </div>
