--- a/articleAssets/aboutself/distresssigns/page3.html
+++ b/articleAssets/aboutself/distresssigns/page3.html
@@ -33,11 +33,9 @@
   <div style="display: flex; flex-direction: column; align-self: center; padding-left: 5%; padding-right: 5%;">	
 		<img style="width: 100%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutself/distresssigns/page3-image1.png">
 
-		<p>Negative stress response characterized by <b>negative emotions and physiological reactions</b></p>
+		<p>Negative stress response is characterized by <b>negative emotions and physiological reactions</b> that arises when one is overwhelmed by demands, losses, or perceived threats</p>
 
-		<p>Arises when one is overwhelmed by demands, losses, or perceived threats</p>
-
-		<p>Harmful as it can lead to <b>serious health issues</b> like high blood pressure, heart disease, obesity, diabetes and even suicide</p>
+		<p>It is harmful as it can lead to <b>serious health issues</b> like high blood pressure, heart disease, obesity, diabetes and even suicide</p>
 	</div>
 </body>
 </html>
