--- a/articleAssets/aboutself/eustress/page1.html
+++ b/articleAssets/aboutself/eustress/page1.html
@@ -39,9 +39,7 @@
 
     <img style="width: 80%; object-fit: contain; align-self: center;" src="../../assets/articleAssets/aboutself/aboutself.png">
 
-    <p>Stress is a normal response that anyone can experience when life demands exceed their ability to cope effectively. Sometimes stress can be from obvious source, other times from small daily things like work, school, family or friendship issues. While too much stress can be bad for our body and mind, manageable stress can be helpful!</p>
-
-    <p>Positive stress, also known as Eustress, can help motivate us, aid us to focus our energy, make things more exciting and even improves our performance!</p>
+    <p>Stress is a normal response that anyone can experience when life demands exceed the ability to cope effectively. Sometimes stress can be from obvious source, other times from small daily things like work, school, family or friendship issues. While too much stress can be bad for our body and mind, manageable stress can be helpful! Positive stress, also known as Eustress, can motivate us, aid us to focus our energy, make things more exciting and even improves our performance!</p>
   </div>
 </body>
 </html>
